mailserver/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: smtp-route
spec:
  entryPoints:
  - smtp
  routes:
  - match: HostSNI(`*`)
    services:
    - name: mailserver
      port: 25
      proxyProtocol:
        version: 2
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: smtp-tls-route
spec:
  entryPoints:
  - smtp-tls
  routes:
  - match: HostSNI(`*`)
    services:
    - name: mailserver
      port: 465
      proxyProtocol:
        version: 2
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: imap-tls-route
spec:
  entryPoints:
  - imap-tls
  routes:
  - match: HostSNI(`*`)
    services:
    - name: mailserver
      port: 993
      proxyProtocol:
        version: 2
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: pop3-tls-route
spec:
  entryPoints:
  - pop3-tls
  routes:
  - match: HostSNI(`*`)
    services:
    - name: mailserver
      port: 995
      proxyProtocol:
        version: 2
